# primerdriver

./: .babelrc  .coveragerc  .env.example  .gitignore  .gitleaks.toml  .mise.toml  .percy.yml  .pre-commit-config.yaml  .slugignore  .travis.yml  404.html  CNAME  Dockerfile  Dockerfile.build  LICENSE  Pipfile  Procfile  README.md  Taskfile.yml  Untitled.ipynb  batch_mut.sh  build.Dockerfile  build.py  build.sh  cli.Dockerfile  cloudbuild.yaml  dev.Dockerfile  docker-compose.yml  docker-entrypoint.sh  docs.Dockerfile  gunicorn.conf.py  index.html  manage.py  mkdocs.yml  objects.inv  package-lock.json  package.json  pdcli.py  primer.fasta  primer.html  (+16 more)
.circleci/: config.yml
.github/workflows/: build-and-push.yml  main.yml  make-docs.yml  publish-docs.yml  publish-pypi.yml  run-tests.yml
api/: index.html
docs/: .buildinfo  api.html  api.md  conf.py  genindex.html  getting_started.md  gettingstarted.html  index.html  index.md  index.rst  installation.html  interface.html  objects.inv  parameter.html  search.html  searchindex.js  software.html  software.md
docs/.doctrees/: api.doctree  environment.pickle  gettingstarted.doctree  index.doctree  installation.doctree  interface.doctree  parameter.doctree  software.doctree
docs/_sources/: api.rst.txt  gettingstarted.rst.txt  index.rst.txt  installation.rst.txt  interface.rst.txt  parameter.rst.txt  software.rst.txt
docs/_static/: alabaster.css  basic.css  doctools.js  documentation_options.js  jquery-3.4.1.js  language_data.js  pygments.css  searchtools.js
docsrc/: gettingstarted.rst  index.rst  software.rst
docsrc/source/: conf.py  gettingstarted.rst  software.rst
frontend/: urls.py  views.py
getting_started/: index.html
lrtstation/: README.md  index.html  package-lock.json  package.json
pdcli/: AAcompressed.json  acgtacgtacgtacgtacgtacgtacgtacgtacgtacgtacgtacgtac  checks.py  dnarna.py  input_handler.py  lut.json  output_handler.py  primerclass.py  settings.json  tests.py  version.py
pdcli/expression system/: Amphimedon queenslandica.json  Aplysia californica.json  Arbacia punctulata.json  Brachypodium distachyon.json  Callosobruchus maculatus.json  Canis familiaris.json  Caulobacter crescentus.json  Clarias gariepinus.json  Cyprinodon variegatus.json  Daphnia pulex.json  Euprymna scolopes.json  Exsys.ipynb  Gallus gallus.json  Gryllus bimaculatus.json  Hydra vulgaris.json  Loligo pealei.json  Lotus japonicus.json  Medicago truncatula.json  Mnemiopsis leidyi.json  Nematostella vectensis.json  Oikopleura dioica.json  Oryza sativa.json  Oryzias latipes.json  Parhyale hawaiensis.json  Schizophyllum commune.json  Selaginella moellendorffii.json  Synechocystis PCC 6803.json  Tribolium castaneum.json  Trichoplax adhaerens.json  Zea mays.json
pdforms/: README.md  index.html  package-lock.json  package.json
pdforms/src/: App.vue  main.js
primerdriver/: __init__.py  __main__.py  checks.py  codon_usage_scraper.ipynb  config.py  dnarna.py  exceptions.py  expression_sys_loader.py  input_handler.py  lut.json  output_handler.py  primer_design.py  primerclass.py  settings.json  settings.schema.json  tests.py  version.py
primerdriver/__tests__/: test_characterize.py
primerdriver/expression system/: Aplysia californica.json  Arabidopsis thaliana.json  Arbacia punctulata.json  Ashbya gossypii ATCC 10895.json  Bacillus subtilis.json  Bombina bombina.json  Caenorhabditis elegans.json  Carassius auratus.json  Catla catla.json  Catostomus commersonii.json  Caulobacter crescentus.json  Chlamydomonas reinhardtii,.json  Chorthippus parallelus.json  Ciona intestinalis.json  Danio rerio.json  Daphnia pulex.json  Dictyostelium discoideum.json  Drosophila melanogaster.json  Mimulus.json  (+40 more)
primerx/: app.py  asgi.py  config.py  jinja2.py  log.py  models.py  settings.py  tasks.py  tests.py  urls.py  version.py  wsgi.py
proxy/: nginx.conf
public/: index.html  robots.txt
sdm/: apps.py  forms.py  models.py  primerdriver.py  primerx.py  requirements.txt  serializers.py  snapshot.js  tests.py  urls.py  views.py
search/: search_index.json
software/: index.html
src/: App.css  App.js  Characterize.js  Landing.js  LoadingScreen.js  Menu.js  Station.js
tests/: test_characterize.py
ui/: biome.json  bun.lockb  index.html  package.json  vite.config.js
(+186 files in other folders)
