[tool.poetry]
name = "primerdriver"
version = "1.3.2"
description = "Automated design of mutagenic PCR primers"
authors = [
    "Kenneth V. Domingo <hello@kvdomingo.xyz>",
    "Numeriano Amer E. Gutierrez <ngutierrez@evc.pshs.edu.ph"
]
readme = "README.md"
homepage = "https://github.com/kvdomingo/primerdriver"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Development Status :: 5 - Production/Stable",
    "Framework :: Flask",
    "Intended Audience :: Science/Research",
    "Typing :: Typed"
]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.11"
biopython = "1.76"
python-dotenv = "^1.0.0"
loguru = "^0.6.0"
pandas = "^1.4.2"
tabulate = "^0.8.9"
furo = "^2023.3.27"
pydantic = "^1.10.7"

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^23.3.0"}
isort = "^5.12.0"
flake8 = "^6.0.0"
pyinstaller = "^5.1"
requests = "^2.27.1"
Sphinx = "^6.1.3"
selenium = "^4.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py38", "py39", "py310"]

[tool.isort]
profile = "black"
