[tool.poetry]
name = "primerdriver"
version = "1.6.0"
description = "Automated design of mutagenic PCR primers"
authors = [
    "Kenneth V. Domingo <hello@kvd.studio>",
    "Numeriano Amer E. Gutierrez <ngutierrez@evc.pshs.edu.ph>"
]
readme = "README.md"
homepage = "https://primerdriver.kvd.studio"
repository = "https://github.com/kvdomingo/primerdriver"
documentation = "https://primerdriver-docs.kvd.studio"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Development Status :: 5 - Production/Stable",
    "Framework :: Flask",
    "Intended Audience :: Science/Research",
    "Typing :: Typed"
]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
python-dotenv = "^1.0.0"
Flask = "^2.1.2"
gunicorn = { extras = ["gthread"], version = "^20.1.0" }
loguru = "^0.6.0"
Flask-Caching = "^1.10.1"
biopython = "1.76"
pandas = "1.4.2"
numpy = "1.24.4"
tabulate = "^0.8.9"
furo = "^2023.3.27"
pydantic = "<2.0.0"
requests = "^2.27.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.1"
pyinstaller = "^6.11.0"
coverage-badge = "^1.1.0"
pytest = "^7.2.2"
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.43"
mkdocstrings = { extras = ["python"], version = "^0.26.2" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C", "B", "UP"]
ignore = ["E203", "E266", "E501", "E402"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["id"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["pydantic.validator"]
